feat: settings for SIP Creator (#79) and Transfer Agent (#77)
