# preingest/Noord.HollandsArchief.Pre.Ingest.WebApi/Entities/Handler/BodySettings.cs
@@ -10,7 +10,12 @@ namespace Noord.HollandsArchief.Pre.Ingest.WebApi.Entities.Handler
         public string Description { get; set; }
         public string ChecksumType { get; set; }
         public string ChecksumValue { get; set; }
-        public string PreservicaTarget { get; set; }
-        public string PreservicaSecurityTag { get; set; }
+        public string Environment { get; set; }
+        public string Owner { get; set; }
+        public string SecurityTag { get; set; }
+        public string CollectionStatus { get; set; }
+        public string CollectionCode { get; set; }
+        public string CollectionTitle { get; set; }
+        public string CollectionRef { get; set; }
     }
 }
