# preingest/Noord.HollandsArchief.Pre.Ingest.WorkerService/Entities/EventHub/Settings.cs
@@ -11,7 +11,12 @@ namespace Noord.HollandsArchief.Pre.Ingest.WorkerService.Entities.EventHub
         public string Description { get; set; }
         public string ChecksumType { get; set; }
         public string ChecksumValue { get; set; }
-        public string PreservicaTarget { get; set; }
-        public string PreservicaSecurityTag { get; set; }
+        public string Environment { get; set; }
+        public string Owner { get; set; }
+        public string SecurityTag { get; set; }
+        public string CollectionStatus { get; set; }
+        public string CollectionCode { get; set; }
+        public string CollectionTitle { get; set; }
+        public string CollectionRef { get; set; }
     }
 }
